--- a/app/views/contracts/calendar.html.erb
+++ b/app/views/contracts/calendar.html.erb
@@ -1,3 +1,22 @@
 <div class="container-fluid p20 sheet-inner">
+   <div class="e1Div">
+    <input type="checkbox" checked="checked" name="e1" id="e1" />
+    <label for="e1">Event Type 1</label>
+</div>
+<div class="e2Div">
+    <input type="checkbox" checked="checked" name="e2" id="e2" />
+    <label for="e2">Event Type 2</label>
+</div>
+<div class="e3Div">
+    <input type="checkbox" checked="checked" name="e3" id="e3" />
+    <label for="e3">Event Type 3</label>
+</div>
+
+<div id="eventContent" class="modal" title="Event Details" style="display:none;">
+    Start: <span id="startTime"></span><br>
+    End: <span id="endTime"></span><br><br>
+    <p id="eventInfo"></p>
+    <p><strong><a id="eventLink" href="" target="_blank">Read More</a></strong></p>
+</div>
 <div class="m10 text-gray50" id="calendar"></div>
 </div>
