--- a/app/views/layouts/_base.html.erb
+++ b/app/views/layouts/_base.html.erb
@@ -52,7 +52,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <%= javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" %>
 
-    <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag "application", async: Rails.env.production?  %>
     <%= yield :javascript %>
 
   </body>
