--- a/app/views/contracts/_frontjobs.html.erb
+++ b/app/views/contracts/_frontjobs.html.erb
@@ -5,40 +5,28 @@
 <!--    <%#= submit_tag "Search", :last_name => nil %>-->
 <!--<%# end %>-->
 <%#= link_to "Calendar", calendar_path %>
+<div class="clearfix container">
+    <h5>Upcoming Events</h5>
+      <hr>
+  <% contract.each do |contract| %>
+    <div class="sheet-inner m20 text-gray-50">
+      <div class="blue-a200 text-gray-50">
+        <%= link_to "#{contract.date_of_event.strftime("%m/%d/%y")}", contract %>
+      </div>
+    
+  
 
-<div class="col-lg-12 col-md-6 col-sm-12">
-<div class="panel">
-   <div class="panel-heading">
-          <p class="lead">All <%#= current_user.management_id %> contracts in the Next 10 Days</p>
-        </div>
-  <table class="ui table segment">
-  <thead>
-    <tr>
-        <th><%= link_to "Date", sort: "date_of_event" %> </th>
-        <th><%= link_to "Act", sort: "act_booked" %> </th>
-        <th><%= link_to "Client", sort: "last_name" %></th>
-        <th><%#= link_to "Contract Status", sort: "contract_status" %></th>
 
-        <th><%= link_to "Event", sort: "type_of_event" %></th>
-        <th><%#= link_to "Location city", sort: "location_city" %></th>
-        <th><%= link_to "Time", sort: "event_time" %></th>
-        <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% contract.each do |contract| %>
-    <tr>
 
-<td><%= link_to "#{contract.date_of_event.strftime("%m/%d/%y")}", contract %></td>
-<td><%= contract.act_booked %></td>
-<td><%= link_to "#{contract.first_name} #{contract.last_name}", contract %></td>
-<td><%#= contract.contract_status %></td>
+<%= contract.act_booked %>
+<%= link_to "#{contract.first_name} #{contract.last_name}", contract %>
+<%#= contract.contract_status %>
 
-<td><%= contract.type_of_event %></td>
-<td><%#= contract.location_city %></td>
-<td><%= contract.eventtime %></td>
+<%= contract.type_of_event %>
+<%#= contract.location_city %>
+<%= contract.eventtime %>
 
-<td>
+
     <% if contract.confirmation == 1  %>
     <%= button_to 'Get Info', contract, class: 'btn btn-flat btn-sm btn-success',method: :get %>
     <% else %>
@@ -47,9 +35,6 @@
     <% end %>
     <%#= link_to 'Get Info', contract, class: 'button blue' %>
 
-    </td>
-  </tr>
+</div>
 <% end %>
-  </tbody>
-</table>
-</div></div>
+</div>
