--- a/app/views/show/_buttonsacross.html.erb
+++ b/app/views/show/_buttonsacross.html.erb
@@ -44,6 +44,6 @@
 </div>
 </div>
 
-<button type="button" class="btn btn-default" data-toggle="popover" data-placement="top" data-content="<% @contract.users.each do |c|  %><%= "#{c.userfullname} " %><% end %>" data-original-title="" title="Staff" id="popoverTwo" aria-describedby="popover644951">
-Show Staff
-</button>
+<!--<button type="button" class="btn btn-default" data-toggle="popover" data-placement="top" data-content="<%# @contract.users.each do |c|  %><%#= "#{c.userfullname} " %><%# end %>" data-original-title="" title="Staff" id="popoverTwo" aria-describedby="popover644951">-->
+<!--Show Staff-->
+<!--</button>-->
