--- a/app/views/staffing/_assigned.html.erb
+++ b/app/views/staffing/_assigned.html.erb
@@ -1,12 +1,14 @@
 <%# @contract.user_ids.each do |contract| %>
   <%#= @contract.userfullname %>
 <%# end %>
+
+<%#= managerprice %>
  <div class="col-lg-6 col-md-6 col-sm-12 animate-drop-fade">
 <%= simple_form_for(@contract) do |f| %>
 
 <div class="field">
-  <%= f.label :user_ids, "Staff for Event" %><br />
-  <%= f.collection_select :user_ids, User.order(:first_name), :id, :userfullname, {class: 'chosen-select'}, {multiple: true} %>
+  <%= f.label :player_ids, "Staff for Event" %><br />
+  <%= f.collection_select :player_ids, Player.order(:first_name), :id, :full_name, {class: 'chosen-select', style: 'width: 100%'}, {multiple: true} %>
   <%#= f.association :jobs, collection: @contract.users, priority: @contract.jobs %>
 
   
@@ -22,12 +24,14 @@
   <%#= f.collection_select :user_ids, User.order(:first_name), :id, :userfullname, {class: 'chosen-select'}, {multiple: true} %>
 <!--</div>-->
 <div class="actions">
-    <%= f.submit %>
+    <%= f.submit("Staff Event") %>
 </div>
 
 <% end %>
 
-<% @contract.users.each do |c|  %>
- <li><%= c.userfullname %></li>
+<% @contract.players.each do |c|  %>
+ <li><%= c.full_name  %> - <%#= c.regular_rate %></li>
 <% end %>
 </div>
+
+<div class="clearfix"></div>
