added payroll and excel export

--- a/app/views/contracts/_dancer.html.erb
+++ b/app/views/contracts/_dancer.html.erb
@@ -1,2 +1,3 @@
-<h1>Dancer</h1>
+<div class="indigo-50 pl20"><h1 class="pl25 pt20 text-left mb0">Dancer</h1>
 <%= render '/show/blank', contract: @contracts  %>
+</div>
