--- a/app/views/contracts/_payroll.html.erb
+++ b/app/views/contracts/_payroll.html.erb
@@ -36,7 +36,7 @@
 
   <td class="conf">
       
-  <span class="label label-success"><%= link_to "STAFF", m %></span>
+  <span class="label label-success"><%= link_to 'Payroll', paypeople_contract_path(m), class: 'btn-success',method: :get %></span>
 
       </td>
   
