--- a/app/views/show/_actnotes.html.erb
+++ b/app/views/show/_actnotes.html.erb
@@ -2,7 +2,7 @@
  <div class="col-lg-6 col-md-6 col-sm-12 animate-drop-fade">
          <p class="lead p0 mt40 mb0 text-amber-900">Act Notes</p>
       
-         <div class="p5">
+         <div class="">
            <%=  contract.act_notes.gsub('"', ' ') unless contract.act_notes.blank? %>
          </div>
       
