--- a/app/views/contracts/show.html.erb
+++ b/app/views/contracts/show.html.erb
@@ -44,12 +44,14 @@
 <div class="container-fluid">
    <div class="row sheet-inner mt20">
        <%#= @activities %>
+       <%= render "show/numberofthings", contract: @contract %>
+       <%= render  "show/moneysection", contract: @contract %>
+       <div class="clearfix"></div>
       <%= render "show/provision", contract: @contract %>
-      <%= render "staffing/assigned", contract: @contract %>
       <%= render  "show/actnotes", contract: @contract %>
       <%= render  "show/addservices", contract: @contract %>
-      <%= render "show/numberofthings", contract: @contract %><hr>
-      <%= render  "show/moneysection", contract: @contract %>
+      <%#= render "show/numberofthings", contract: @contract %><hr>
+      <%#= render  "show/moneysection", contract: @contract %>
       <%#= render  "show/clientextra", contract: @contract %>   <!-- DO LATER -->
       
       <p><%#= link_to "Add Staff", new_user_path %></p>
