--- a/app/views/layouts/sidenav.html.erb
+++ b/app/views/layouts/sidenav.html.erb
@@ -24,7 +24,7 @@
           <li class=""><%= link_to "Users", users_path %></li>
           <li class=""><%= link_to "Staffing", users_path %></li>
           <li class=""><%= link_to "Payroll", payroll_path %></li>
-          <li><%= link_to destroy_user_session_path, :method => :delete,  :class => "btn btn-default btn-flat small" do %> <%= content_tag :small, "Logout"  %> <% end %></li>
+          <li><%= link_to destroy_user_session_path, :method => :delete,  :class => "" do %> <%= content_tag :small, "Logout"  %> <% end %></li>
           <!--<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Clusters <span class="caret"></span></a>-->
           <!-- <ul class="dropdown-menu">-->
           <!--    <li class=""><a href="#">Calendar</a></li><%#= link_to "Calendar", calendar_path %>-->
