--- a/app/views/show/_blank.html.erb
+++ b/app/views/show/_blank.html.erb
@@ -17,13 +17,16 @@
                   <h5 class="mt0 mb0 ml5"><%= contract.type_of_event %></h5>
                   <%#= contract.location_city %>
                   <h5 class="mt10 mb0 ml5"><%= contract.eventtime %></h5>
+                  
+                    <%= content_tag(:h5, "Home Phone:              #{contract.home_phone}", class: "mb0") unless contract.home_phone.blank? %>
+                    <%= content_tag(:h5, "Work Phone:              #{contract.work_phone}", class: "mb0") unless contract.work_phone.blank? %>
                </div>
                </div>
                           <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
 <% if contract.location_name? %>
    <address>
          <div>
-               <p class="lead pb0 mb0"><%= contract.location_name.gsub('"', ' ') %></p>
+               <p class="lead pb0 mb0 pt10"><%= contract.location_name.gsub('"', ' ') %></p>
                 <p><%= "#{contract.location_address_line_1}" %> <br> <%= "#{contract.location_city} #{contract.location_state} #{contract.location_zip}" %><br>
                   Phone: <%= contract.location_phone %>
                  
@@ -38,6 +41,7 @@
 <div class="small"></div>
 </div>
                  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 pt10">
+                    <p class="lead"><%= contract.act_booked %></p>
                    <p><%=  contract.contract_provisions.gsub('"', ' ') unless contract.contract_provisions.blank? %></p>
                  
                  </div>
@@ -45,10 +49,10 @@
       
                  <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
  <% if contract.confirmation == 1  %>
-    <%= button_to 'Get Info', contract, class: 'btn btn-flat btn-sm btn-success',method: :get %>
+    <%= link_to 'GET JOB INFO', contract, class: 'btn btn-flat btn-lg btn-success',method: :get %>
     <% else %>
     <%#= button_to 'CONFIRM', m, class: 'btn-danger',method: :get %>
-     <%=   link_to ' CONFIRM THIS EVENT ', confirmjob_contract_path(contract.id),  class: "btn btn-flat btn-sm btn-danger" %>
+     <%=   link_to ' CONFIRM THIS EVENT ', confirmjob_contract_path(contract.id),  class: "btn btn-flat btn-lg btn-danger" %>
     <%#= button_to 'CONFIRM', confirmjob_contract_path(contract.id), class: "btn btn-flat btn-sm btn-danger" %>
     <% end %>
 <span class="metric-value">
