--- a/app/views/show/_provision.html.erb
+++ b/app/views/show/_provision.html.erb
@@ -13,9 +13,10 @@
     <div class="col-lg-6 col-md-6 col-sm-12 animate-drop-fade">
          <p class="lead p0 mb0 text-amber-900">Client Provisions</p>
       
-         <div class="p15">
+         <div class="">
             
          </div>
       
    </div>
 <% end %>
+
