--- a/app/views/show/_actnotes.html.erb
+++ b/app/views/show/_actnotes.html.erb
@@ -1,4 +1,5 @@
 <% unless contract.act_notes == "nil" %>
+
  <div class="col-lg-6 col-md-6 col-sm-12 animate-drop-fade">
          <p class="lead p0 mt40 mb0 text-amber-900">Act Notes</p>
       
@@ -10,13 +11,11 @@
    
    <% else %> 
     <div class="col-lg-6 col-md-6 col-sm-12 animate-drop-fade">
-         <p class="lead p0 mb0 text-amber-900">Act Notes</p>
+         <p class="lead p0 mt40 mb0 text-amber-900">Act Notes</p>
       
          <div class="">
            
          </div>
       
    </div>
-   
-   
 <% end %>
