--- a/app/views/show/_provision.html.erb
+++ b/app/views/show/_provision.html.erb
@@ -1,5 +1,4 @@
 <% unless contract.contract_provisions == "nil" %>
-
  <div class="col-lg-6 col-md-6 col-sm-12 animate-drop-fade">
          <p class="lead p0 mt40 mb0 text-amber-900">Client Provisions</p>
    
@@ -11,7 +10,7 @@
    
    <% else %> 
     <div class="col-lg-6 col-md-6 col-sm-12 animate-drop-fade">
-         <p class="lead p0 mb0 text-amber-900">Client Provisions</p>
+         <p class="lead p0 mt40 mb0 text-amber-900">Client Provisions</p>
       
          <div class="">
             
@@ -19,4 +18,3 @@
       
    </div>
 <% end %>
-
