--- a/app/views/contracts/show.html.erb
+++ b/app/views/contracts/show.html.erb
@@ -8,6 +8,7 @@
 <%= content_tag(:p, "#{@contract.email_address}", class: "mb0") unless @contract.email_address.blank? %>
 <%= content_tag(:p, "Home Phone:              #{@contract.home_phone}", class: "mb0") unless @contract.home_phone.blank? %>
 <%= content_tag(:p, "Work Phone:              #{@contract.work_phone}", class: "mb0") unless @contract.work_phone.blank? %>
+<%= content_tag(:p, "Event Times:              #{@contract.eventtime}", class: "mb0")  %>
 <br><%= render  "show/agent", contract: @contract %>
 </div>
 </div>
