--- a/app/views/show/_buttonsacross.html.erb
+++ b/app/views/show/_buttonsacross.html.erb
@@ -14,7 +14,7 @@
 </div>
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
     <%   if contract.confirmation == 0 && contract.date_of_event < Date.today + 11.days %>
-<h4 class="red-a700 text-indigo-50"> <%=   link_to ' CONFIRM THIS EVENT ', confirmjob_contract_path(contract.id), class: 'lead  text-grey-50' %></h4>
+<h4 class="text-indigo-50"> <%=   link_to ' CONFIRM THIS EVENT ', confirmjob_contract_path(contract.id), class: 'btn btn-flat btn-danger' %></h4>
 <% end %>
 <span class="metric-value">
 
@@ -22,21 +22,21 @@
 <div class="small"></div>
 </div>
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-<h4><% if current_user.try(:type) == "ManagerUser" %><%= link_to 'Email All Money', emailjobwithallmoney_path(id: contract.id), class: 'btn small lead  text-grey-50' %><% end %> </h4>
+<h4><% if current_user.try(:type) == "ManagerUser" %><%= link_to 'Email All Money', emailjobwithallmoney_path(id: contract.id), class: 'btn btn-flat btn-sm btn-danger' %><% end %> </h4>
 <span class="metric-value">
 
 </span>
 <div class="small"></div>
 </div>
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-<h4><% if current_user.try(:type) == "ManagerUser" %><%= link_to 'Email Net Money', emailjobwithnetonly_path(id: contract.id), class: 'btn small lead text-grey-50' %> <% end %></h4>
+<h4><% if current_user.try(:type) == "ManagerUser" %><%= link_to 'Email Net Money', emailjobwithnetonly_path(id: contract.id), class: 'btn btn-flat btn-sm btn-success' %> <% end %></h4>
 <span class="metric-value">
 
 </span>
 <div class="small"></div>
 </div>
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-<h4><%= link_to 'Email Job Info', emailjobnomoney_path(id: contract.id), class: 'btn lead small text-grey-50' %></h4>
+<h4><%= link_to 'Email Job Info', emailjobnomoney_path(id: contract.id), class: 'btn btn-flat btn-sm btn-warning' %></h4>
 <span class="metric-value">
 
 </span>
