--- a/app/views/show/_moneysection.html.erb
+++ b/app/views/show/_moneysection.html.erb
@@ -1,10 +1,11 @@
 <% if current_user.try(:type) == "ManagerUser" %>
 
-<div class="col-lg-12 col-md-12 col-sm-12 text-center">
+<!--<div class="col-lg-12 col-md-12 col-sm-12 text-center bg-warning pt20 pb20">-->
+<div class="col-lg-12 col-md-12 col-sm-12 text-center pt20 pb20 bg-warning">
 
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-<p class="lead p0 mt20 mb0 text-blue-900">giveaways charge</p>
-<span class="metric-value">
+<dt class="text-uppercase">giveaways charge</dt>
+<span class="metric-value pt20 pb20 text-success">
 <%= content_tag(:strong,"#{number_to_currency(contract.giveaways_charge)}") unless self.blank? || contract.giveaways_charge == 0 %>
 </span>
 
@@ -18,15 +19,16 @@
 
 
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-<p class="lead p0 mt20 mb0 text-blue-900">cocktails charge</p>
-<span class="metric-value">
+<dt class="text-uppercase">cocktails charge</dt>
+<span class="metric-value pt20 pb20 text-success">
 <%= content_tag(:strong,"#{number_to_currency(contract.cocktails_charge)}") unless  self.blank? || contract.cocktails_charge == 0 %>
 
 </span>
 </div>
+
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-<p class="lead p0 mt20 mb0 text-blue-900">ceremony charge</p>
-<span class="metric-value">
+<dt class="text-uppercase">ceremony charge</dt>
+<span class="metric-value pt20 pb20 text-success">
 <%= content_tag(:strong,"#{number_to_currency(contract.ceremony_charge)}") unless self.blank? || contract.ceremony_charge == 0 %>
 
 </span>
@@ -34,22 +36,22 @@
 </div>
 
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-<p class="lead p0 mt20 mb0 text-blue-900">early setup charge</p>
-<span class="metric-value">
+<dt class="text-uppercase">early setup charge</dt>
+<span class="metric-value pt20 pb20 text-success">
 <%= content_tag(:strong,"#{number_to_currency(contract.early_setup_charge)}") unless self.blank? || contract.early_setup_charge == 0 %>
 </span>
 
 </div>
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-<p class="lead p0 mt20 mb0 text-blue-900">charge per horn</p>
-<span class="metric-value">
+<dt class="text-uppercase">charge per horn</dt>
+<span class="metric-value pt20 pb20 text-success">
 <%= content_tag(:strong,"#{contract.number_of_horns}"  " @"  "#{number_to_currency(contract.charge_per_horn)}") unless self.blank? || contract.number_of_horns == 0 %>
 </span>
 
 </div>
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-<p class="lead p0 mt20 mb0 text-blue-900">non-commission charges</p>
-<span class="metric-value">
+<dt class="text-uppercase">non-commission charges</dt>
+<span class="metric-value pt20 pb20 text-success">
 <%= content_tag(:strong,"#{number_to_currency(contract.non_commissionable_charges)}") unless self.blank? || contract.non_commissionable_charges == 0 %>
 
 </span>
@@ -57,6 +59,7 @@
 </div>
 
 </div>
+<hr>
 
 
 
@@ -64,7 +67,7 @@
 
 
 <%#= content_tag (:div), :class => "dl-horizontal" do %>
-<%#= content_tag(:div,"Contract Price :              #{number_to_currency(contract.contract_price)}")  unless self.blank? || contract.contract_price == 0  %><br>
+<%#= content_tag(:div,"Contract Price :              #{number_to_currency(contract.contract_price)}")  unless self.blank? || contract.contract_price == 0  %>
 <%#= content_tag(:div,"Act Gross:            #{number_to_currency(contract.act_gross)}") unless  self.blank? || contract.act_gross == 0 %>
 <%#= content_tag(:div,"Act Net:            #{number_to_currency(contract.act_net)}") unless  self.blank? || contract.act_net == 0 %>
 <%#= content_tag(:div,"cocktails charge:            #{number_to_currency(contract.cocktails_charge)}") unless  self.blank? || contract.cocktails_charge == 0 %>
@@ -78,10 +81,10 @@
 <%#= content_tag(:div,"non-commission charges:  #{number_to_currency(contract.non_commissionable_charges)}") unless self.blank? || contract.non_commissionable_charges == 0 %>
 <%#= content_tag(:div,"capital music pay:           #{number_to_currency(contract.capital_music_pay)}") unless self.blank? || contract.capital_music_pay == 0 %>
 <%#= content_tag(:div,"base price of act:           #{number_to_currency(contract.base_price_of_act)}") unless self.blank? || contract.base_price_of_act == 0  %>
-<hr>
+
 <%#= content_tag(:div, "Referral Fee to :           #{@contract.referral_fee_to}") unless @contract.referral_fee_to.blank? %>
 
 <%#= content_tag(:div,"referral fee amount:         #{number_to_currency(contract.referral_fee_amount)}") unless self.blank? || contract.referral_fee_amount == 0   %>
 <%#= content_tag(:strong,"tax amount:                  #{number_to_currency(contract.tax_amount)}") unless self.blank? || contract.tax_amount == 0 %>
-<% #end %>
+
 <% end %>
