--- a/app/views/show/_numberofthings.html.erb
+++ b/app/views/show/_numberofthings.html.erb
@@ -1,8 +1,8 @@
 <% if current_user.try(:type) == "ManagerUser" %>
-<div class="col-lg-12 col-md-12 col-sm-12 text-center light-blue-50 pt5 well pb20">
+<div class="col-lg-12 col-md-12 col-sm-12 text-center pt20 pb20 bg-info">
 
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-<p class="lead p0 mt20 mb0 text-blue-900">Number of Dancers</p>
+<dt>Number of Dancers</dt>
 <span class="metric-value">
 <%= content_tag(:strong,"#{contract.number_of_dancers}") %>
 
@@ -11,14 +11,14 @@
 </div>
 
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-<p class="lead p0 mt20 mb0 text-blue-900">Giveaways</p>
+<dt>Giveaways</dt>
 <span class="metric-value">
 <%= content_tag(:strong,"#{contract.giveaways}") %>
 </span>
 
 </div>
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-<p class="lead p0 mt20 mb0 text-blue-900">Number of Horns</p>
+<dt>Number of Horns</dt>
 <span class="metric-value">
 <%= content_tag(:strong,"#{contract.number_of_horns}") %>
 </span>
@@ -27,7 +27,7 @@
 
 
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-<p class="lead p0 mt20 mb0 text-blue-900">Contract Price </p>
+<dt>Contract Price </dt>
 <span class="metric-value">
 <%= content_tag(:strong,"#{number_to_currency(contract.contract_price)}")  unless self.blank? || contract.contract_price == 0  %><br>
 
@@ -37,7 +37,7 @@
 
 
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-<p class="lead p0 mt20 mb0 text-blue-900">Act Net:</p>
+<dt>Act Net:</dt>
 <span class="metric-value">
 <%= content_tag(:strong,"#{number_to_currency(contract.act_net)}") unless  self.blank? || contract.act_net == 0 %>
 
@@ -48,7 +48,7 @@
 
 
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-<p class="lead p0 mt20 mb0 text-blue-900">Referral fee</p>
+<dt>Referral fee</dt>
 <span class="metric-value">
 <%= content_tag(:strong,"#{number_to_currency(contract.referral_fee_amount)}") unless self.blank? || contract.referral_fee_amount == 0   %>
 <%= contract.referral_fee_to %>
