updated players to only show current managemnt company

--- a/app/views/contracts/_frontjobs.html.erb
+++ b/app/views/contracts/_frontjobs.html.erb
@@ -27,7 +27,7 @@
 <%= contract.eventtime %>
 
 
-    <% if contract.confirmation == 1  %>
+    <% if contract.confirmed %>fhfhfhf
     <%= button_to 'Get Info', contract, class: 'btn btn-flat btn-sm btn-success',method: :get %>
     <% else %>
     <%#= button_to 'CONFIRM', m, class: 'btn-danger',method: :get %>
