--- a/app/views/contracts/_newfrontjobs.html.erb
+++ b/app/views/contracts/_newfrontjobs.html.erb
@@ -39,7 +39,7 @@
 <td><%= contract.eventtime %></td>
 
 <td>
-    <% if contract.confirmation == 1  %>
+    <% if contract.confirmed  %>
     <%= button_to 'Get Info', contract, class: 'btn btn-flat btn-sm btn-success',method: :get %>
     <% else %>
     <%#= button_to 'CONFIRM', m, class: 'btn-danger',method: :get %>
