--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -4,9 +4,9 @@
 
   <div class="form-inputs">
     <%= f.form_group :user_id do |f| %>
-      <%= f.label :user_id, class: 'control-label col-md-2' %>
+      <%#= f.label :user_id, class: 'control-label col-md-2' %>
       <div class='col-md-8'>
-        <%= f.text_field :user_id, class: 'form-control' %>
+        <%#= f.text_field :user_id, class: 'form-control' %>
         <%= f.error_messages %>
       </div>
     <% end %>
