--- a/app/views/layouts/sidenav.html.erb
+++ b/app/views/layouts/sidenav.html.erb
@@ -22,7 +22,7 @@
           <li class=""><%= link_to "Profile", edit_user_registration_path %></li>
           <li class=""><%= link_to "Calendar", calendar_path %></li>
           <li class=""><%= link_to "Users", users_path %></li>
-          <li class=""><%= link_to "Staffing", users_path %></li>
+          <li class=""><%= link_to "Staff", players_path %></li>
           <li class=""><%= link_to "Payroll", payroll_path %></li>
           <li><%= link_to destroy_user_session_path, :method => :delete,  :class => "" do %> <%= content_tag :small, "Logout"  %> <% end %></li>
           <!--<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Clusters <span class="caret"></span></a>-->
