--- a/app/views/reports/_top.html.erb
+++ b/app/views/reports/_top.html.erb
@@ -11,9 +11,9 @@
 <%# @reports =  Contract.where(confirmation_date: (Chronic.parse("first of this month"))..(Chronic.parse("end of this month"))).order('date_of_event ASC', 'act_booked ASC') %>
 <%#= line_chart @reports.group_by_month(:confirmation_date).sum(:contract_price) %>
 
-<% @reports = User.group_by_day(:created_at).count %>
+<%# @reports = User.group_by_day(:created_at).count %>
 
  <%#= @reports.group_by_month %>
- <div id="chartContainer"><%= @chart.render() %></div>
+ <div id="chartContainer"><%#= @chart.render() %></div>
 
 </div>
