--- a/app/views/show/_blank.html.erb
+++ b/app/views/show/_blank.html.erb
@@ -48,7 +48,7 @@
                  
       
                  <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
- <% if contract.confirmation == 1  %>
+ <% if contract.confirmed?  %>
     <%= link_to 'GET JOB INFO', contract, class: 'btn btn-flat btn-lg btn-success',method: :get %>
     <% else %>
     <%#= button_to 'CONFIRM', m, class: 'btn-danger',method: :get %>
