--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,8 +1,10 @@
-<% @players.each do |p| %>
+<%# @players.each do |p| %>
 
-<li><%= p.first_name %> -  <%= p.regular_rate %></li>
+<!--<li>-->
+  <%#= p.first_name %> -  <%#= p.regular_rate %>
+  <!--</li>-->
 
-<% end %>
+<%# end %>
 
 <% @title = "Listing players" %>
 
