--- a/app/views/layouts/_usernav.html.erb
+++ b/app/views/layouts/_usernav.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="collapse navbar-collapse" id="second-content-nav">
    
    <ul class="list-unstyled pl20">
       <li class="text-grey-200 pt50"><span class="fa fa-home fa-lg"></span> <%= link_to root_path , :class => "dl text-grey-200" do %> <%= content_tag :"span", "Home"  %> <% end %></li>
