--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -30,7 +30,7 @@
           <%= f.form_group :password do |f| %>
           <%= f.label :management, class: "col-xs-1 col-sm-2 col-md-2 control-label" %>
           <div class="col-sm-10">
-              <%= f.collection_select :management_id, Management.order(:name), :id, :name, {}, {multiple:true} %>
+              <%#= f.collection_select :management_id, Management.order(:name), :id, :name, {}, {multiple:true} %> <%= current_user.managements.name %>
           </div>
           <% end %>
 
@@ -66,7 +66,7 @@
                 We need your current password to confirm your changes.
               </div>
             </div>
-            <% if current_user.try(:manager?) %>
+            <% unless current_user.try(:manager?) %>
             <%= f.form_group :password do |f| %>
              <%= f.label :admin, class: "col-xs-1 col-sm-2 col-md-2 control-label" %>
             <div class="col-sm-10">
@@ -77,7 +77,7 @@
             <% end %>
           <% end %>
           
-           <% if current_user.try(:manager?) %>
+           <% unless current_user.try(:manager?) %>
             <%= f.form_group :password do |f| %>
              <%= f.label :approved, class: "col-xs-1 col-sm-2 col-md-2 control-label" %>
             <div class="col-sm-10">
@@ -91,7 +91,7 @@
  <% end %>
           <div class="form-actions col-sm-offset-2">
             <%= f.submit "Update", class: 'btn btn-primary' %>
-            <%= link_to "Cancel my account", registration_path(resource_name), confirm: "Are you sure?", method: :delete, class: "pull-right text-red-400 pt10" %>
+            <%#= link_to "Cancel my account", registration_path(resource_name), confirm: "Are you sure?", method: :delete, class: "pull-right text-red-400 pt10" %>
           </div>
         <% end %>
       </div>
