--- a/app/views/layouts/_sidenav.html.erb
+++ b/app/views/layouts/_sidenav.html.erb
@@ -1,5 +1,5 @@
 <div class="nav-side-menu ">
- <div class="p10">
+ <div>
     <% if current_user.try(:type) == "ManagerUser" %>
    <%= render  'shared/quickjobs', contract: Contract.where(act_code: @manger.split(",")).order(params[:sort] || :date_of_event).tenday.all  %>
    <% else %>
