--- a/app/views/layouts/sidenav.html.erb
+++ b/app/views/layouts/sidenav.html.erb
@@ -17,14 +17,14 @@
       <div class="collapse navbar-collapse" id="main-content-nav">
         
        <ul class="nav navbar-nav">
-        
+         <% unless current_user.try(:type) == "User" %>
           <li class=""><%= link_to "Home", root_path %></li>
           <li class=""><%= link_to "Profile", edit_user_registration_path %></li>
           <li class=""><%= link_to "Calendar", calendar_path %></li>
-          <li class=""><%= link_to "Users", users_path %></li>
+          <li class=""><%#= link_to "Users", users_path %></li>
           <li class=""><%= link_to "Staff", players_path %></li>
-          <li class=""><%= link_to "Payroll", payroll_path %></li>
-          <li><%= link_to destroy_user_session_path, :method => :delete,  :class => "" do %> <%= content_tag :small, "Logout"  %> <% end %></li>
+          <li class=""><%#= link_to "Payroll", payroll_path %></li>
+          <li><%= link_to "Logout", destroy_user_session_path, :method => :delete%> </li>
           <!--<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Clusters <span class="caret"></span></a>-->
           <!-- <ul class="dropdown-menu">-->
           <!--    <li class=""><a href="#">Calendar</a></li><%#= link_to "Calendar", calendar_path %>-->
@@ -33,6 +33,7 @@
           <!--    <li class=""><a href="#">Cluster 4</a></li>-->
           <!--  </ul>-->
           <!--</li>-->
+          <% end %>
         </ul> 
 
         <!--<ul class="nav navbar-nav navbar-right">-->
