--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -4,7 +4,7 @@
 <%#= admin_types.include?(current_user.try(:type)) %>
 <%# if admin_types.include?(current_user.try(:type?)) %>
 <% if current_user.try(:type) == "ManagerUser" %>
-
+<%= link_to "emails", rails_email_preview.rep_root_url %>
 <%= render 'manager', contract: @contracts %>
 
 <% elsif current_user.try(:type) == "ManagementUser" %>
