--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,13 +1,10 @@
 <% @title = "Edit #{resource_name.to_s.humanize}" %>
+<%= render :layout => "layouts/minimal" do %>
+<%= render partial: "layouts/sidenav" %>
 <%# current_user.update_attribute :admin, true %>
 <div id="main" class='devise'>
-  <div class="container-fluid">
-    <div class="row">
-      <header class="text-center">
-        <h1><%=app_name%></h1>
-        <p class="p0 m0">Your Account Details</p>
-      </header>
-    </div>
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+  
     <div class="row mt20">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <%= form_for resource, as: resource_name, url: registration_path(resource_name),
@@ -98,3 +95,4 @@
     </div>
   </div>
 </div>
+<% end %>
