--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -36,7 +36,7 @@
         </div>
 
         <div class="form-actions text-right">
-          <%= f.submit "Sign up", class: 'btn btn-primary' %>
+          <%#= f.submit "Sign up", class: 'btn btn-primary' %>
         </div>
       <% end %>
     </div>
