added sales user type

--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -11,9 +11,13 @@
 
 <%= render 'admin', contract: @contracts %>
 
-<%#= render 'dancerjobs', contract: @contracts %>
+<% elsif current_user.try(:type) == "Sales" %>
+
+<%= render 'search', contract: @contracts %>
  <% else %>
  <%= render 'dancer', contract: @contracts %>
+ 
+  <% else %>
  
  <% end %>
 <br>
