--- a/app/views/layouts/_base.html.erb
+++ b/app/views/layouts/_base.html.erb
@@ -18,7 +18,7 @@
     <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Lato:300,400,700,900' %>
 
     <!-- Le styles -->
-    <%= stylesheet_link_tag "application" "highcharts", :media => "all" %>
+    <%= stylesheet_link_tag "application", :media => "all" %>
     
   
     <%= yield :styles %>
